icon-model/externals/yac/src/core/interp_stack_config.h

struct yac_interp_stack_config;
void yac_interp_stack_config_add_fixed(
  struct yac_interp_stack_config * interp_stack_config, double value);
void yac_interp_stack_config_add_check(
  struct yac_interp_stack_config * interp_stack_config,
  char const * constructor_key, char const * do_search_key);
void yac_interp_stack_config_add_creep(
  struct yac_interp_stack_config * interp_stack_config, int creep_distance);
int yac_interp_stack_config_compare(void const * a, void const * b);
struct interp_method ** yac_interp_stack_config_generate(
  struct yac_interp_stack_config * interp_stack);