icon-model/externals/yac/src/core/interpolation.h

struct yac_interpolation;
// src_fields dimensions [collection_idx]
//                       [field index]
//                       [local_idx]
// tgt_field dimensions [collection_idx]
//                      [local_idx]
void yac_interpolation_execute(
  struct yac_interpolation * interp, double *** src_fields,
  double ** tgt_field);
void yac_interpolation_execute_frac(
  struct yac_interpolation * interp, double *** src_fields,
  double *** src_frac_masks, double ** tgt_field);
// src_fields dimensions [collection_idx]
//                       [field index]
//                       [local_idx]
void yac_interpolation_execute_put(
  struct yac_interpolation * interp, double *** src_fields);
void yac_interpolation_execute_put_frac(
  struct yac_interpolation * interp, double *** src_fields,
  double *** src_frac_masks);
// tgt_field dimensions [collection_idx]
//                      [local_idx]
void yac_interpolation_execute_get(
  struct yac_interpolation * interp, double ** tgt_field);
void yac_interpolation_execute_get_async(
  struct yac_interpolation * interp, double ** tgt_field);
int yac_interpolation_execute_put_test(struct yac_interpolation * interp);
int yac_interpolation_execute_get_test(struct yac_interpolation * interp);
void yac_interpolation_execute_wait(struct yac_interpolation * interp);
void yac_interpolation_delete(struct yac_interpolation * interp);