icon-model/externals/yac/src/core/yac_core.F90


    subroutine yac_interp_stack_config_add_fixed_c( &
      interp_stack_config, value) &
      bind ( C, name='yac_interp_stack_config_add_fixed' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value         :: interp_stack_config
      real(kind=c_double), value :: value
    end subroutine yac_interp_stack_config_add_fixed_c

    subroutine yac_interp_stack_config_add_creep_c( &
      interp_stack_config, n) &
      bind ( C, name='yac_interp_stack_config_add_creep' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value         :: interp_stack_config
      integer(kind=c_int), value :: n
    end subroutine yac_interp_stack_config_add_creep_c

    subroutine yac_interp_stack_config_add_check_c( &
      interp_stack_config, constructor_key, do_search_key) &
      bind ( C, name='yac_interp_stack_config_add_check' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value     :: interp_stack_config
      character(kind=c_char) :: constructor_key(*)
      character(kind=c_char) :: do_search_key(*)
    end subroutine yac_interp_stack_config_add_check_c

    function yac_interp_stack_config_compare_c(a, b) &
      bind ( C, name='yac_interp_stack_config_compare' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: a
      type(c_ptr), value :: b

      integer(kind=c_int) :: yac_interp_stack_config_compare_c
    end function yac_interp_stack_config_compare_c

    function yac_interp_stack_config_generate_c(interp_stack_config) &
      bind ( C, name='yac_interp_stack_config_generate' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp_stack_config

      ! struct interp_method **
      type(c_ptr) :: yac_interp_stack_config_generate_c
    end function yac_interp_stack_config_generate_c

  end interface

  !----------------------------------
  ! Handling of interpolation methods
  !----------------------------------

  interface

    function yac_interp_method_do_search_c(interp_method_stack, interp_grid) &
      bind ( C, name='yac_interp_method_do_search' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp_method_stack
      type(c_ptr), value :: interp_grid

      ! struct yac_interp_weights *
      type(c_ptr) :: yac_interp_method_do_search_c
    end function yac_interp_method_do_search_c

    subroutine yac_interp_method_delete_c(interp_method_stack) &
      bind ( C, name='yac_interp_method_delete' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp_method_stack
    end subroutine yac_interp_method_delete_c

    subroutine yac_interp_method_cleanup_c() &
      bind ( C, name='yac_interp_method_cleanup' )

    end subroutine yac_interp_method_cleanup_c

  end interface

  !----------------------------------
  ! Handling of interpolation weights
  !----------------------------------

  interface

    subroutine yac_interp_weights_delete_c(interp_weights) &
      bind ( C, name='yac_interp_weights_delete' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp_weights
    end subroutine yac_interp_weights_delete_c

    subroutine yac_interp_weights_write_to_file_c(interp_weights, &
                                                  filename,       &
                                                  src_grid_name,  &
                                                  tgt_grid_name,  &
                                                  src_grid_size,  &
                                                  tgt_grid_size,  &
                                                  on_existing)    &
      bind ( C, name='yac_interp_weights_write_to_file' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value            :: interp_weights
      character(kind=c_char)        :: filename(*)
      character(kind=c_char)        :: src_grid_name(*)
      character(kind=c_char)        :: tgt_grid_name(*)
      integer(kind=c_size_t), value :: src_grid_size
      integer(kind=c_size_t), value :: tgt_grid_size
      integer(kind=c_int), value    :: on_existing
    end subroutine yac_interp_weights_write_to_file_c

    function yac_interp_weights_get_interpolation_c( &
      interp_weights, reorder, collection_size, frac_mask_fallback_value, &
      scaling_factor, scaling_summand, yaxt_exchanger_name, &
      is_source, is_target) &
      bind ( C, name='yac_interp_weights_get_interpolation_f2c' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value            :: interp_weights
      integer(kind=c_int), value    :: reorder
      integer(kind=c_size_t), value :: collection_size
      real(kind=c_double), value    :: frac_mask_fallback_value
      real(kind=c_double), value    :: scaling_factor
      real(kind=c_double), value    :: scaling_summand
      character(kind=c_char)        :: yaxt_exchanger_name
      integer(kind=c_int), value    :: is_source
      integer(kind=c_int), value    :: is_target

      ! struct yac_interpolation *
      type(c_ptr) :: yac_interp_weights_get_interpolation_c
    end function yac_interp_weights_get_interpolation_c

  end interface

  !---------------------------
  ! Handling of interpolations
  !---------------------------

  interface

    subroutine yac_interpolation_delete_c(interp) &
      bind ( C, name='yac_interpolation_delete' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
    end subroutine yac_interpolation_delete_c

    subroutine yac_interpolation_execute_c( &
      interp, src_fields, tgt_field) &
      bind ( C, name='yac_interpolation_execute' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
      type(c_ptr), value :: src_fields
      type(c_ptr), value :: tgt_field
    end subroutine yac_interpolation_execute_c

    subroutine yac_interpolation_execute_frac_c( &
      interp, src_fields, src_frac_masks, tgt_field) &
      bind ( C, name='yac_interpolation_execute_frac' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
      type(c_ptr), value :: src_fields
      type(c_ptr), value :: src_frac_masks
      type(c_ptr), value :: tgt_field
    end subroutine yac_interpolation_execute_frac_c

    subroutine yac_interpolation_execute_put_c(interp, src_fields) &
      bind ( C, name='yac_interpolation_execute_put' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
      type(c_ptr), value :: src_fields
    end subroutine yac_interpolation_execute_put_c

    subroutine yac_interpolation_execute_put_frac_c( &
      interp, src_fields, src_frac_masks) &
      bind ( C, name='yac_interpolation_execute_put_frac' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
      type(c_ptr), value :: src_fields
      type(c_ptr), value :: src_frac_masks
    end subroutine yac_interpolation_execute_put_frac_c

    subroutine yac_interpolation_execute_get_c(interp, tgt_field) &
      bind ( C, name='yac_interpolation_execute_get' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
      type(c_ptr), value :: tgt_field
    end subroutine yac_interpolation_execute_get_c

    subroutine yac_interpolation_execute_get_async_c(interp, tgt_field) &
      bind ( C, name='yac_interpolation_execute_get_async' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
      type(c_ptr), value :: tgt_field
    end subroutine yac_interpolation_execute_get_async_c

    function yac_interpolation_execute_put_test_c(interp) &
      bind ( C, name='yac_interpolation_execute_put_test' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp

      integer(kind=c_int) :: yac_interpolation_execute_put_test_c
    end function yac_interpolation_execute_put_test_c

    function yac_interpolation_execute_get_test_c(interp) &
      bind ( C, name='yac_interpolation_execute_get_test' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp

      integer(kind=c_int) :: yac_interpolation_execute_get_test_c
    end function yac_interpolation_execute_get_test_c

    subroutine yac_interpolation_execute_wait_c(interp) &
      bind ( C, name='yac_interpolation_execute_wait' )

      use, intrinsic :: iso_c_binding

      type(c_ptr), value :: interp
    end subroutine yac_interpolation_execute_wait_c

    function yac_interpolation_get_const_frac_mask_no_value_c() &
      bind ( C, name='yac_interpolation_get_const_frac_mask_no_value_c2f' )

      use, intrinsic :: iso_c_binding

      real(kind=c_double) :: &
        yac_interpolation_get_const_frac_mask_no_value_c
    end function yac_interpolation_get_const_frac_mask_no_value_c

    function yac_interpolation_get_const_frac_mask_undef_c() &
      bind ( C, name='yac_interpolation_get_const_frac_mask_undef_c2f' )

      use, intrinsic :: iso_c_binding

      real(kind=c_double) :: &
        yac_interpolation_get_const_frac_mask_undef_c
    end function yac_interpolation_get_const_frac_mask_undef_c

  end interface

  !--------------------
  ! Abort functionality
  !--------------------

  interface

     subroutine yac_abort_message_c ( text, file, line ) &
           bind ( c, name='yac_abort_message' )

       use, intrinsic :: iso_c_binding, only : c_int, c_char

       character ( kind=c_char ), dimension(*) :: text       !< [IN] error message
       character ( kind=c_char ), dimension(*) :: file       !< [IN] error message
       integer ( kind=c_int ), value           :: line       !< [IN] line number

     end subroutine yac_abort_message_c

  end interface

  !---------------------------------
  ! Setting of callback routines for
  ! check interpolation method
  !---------------------------------

  interface

     subroutine yac_interp_method_check_add_constructor_callback_c ( &
       constructor_callback, user_data, key ) &
       bind ( c, name='yac_interp_method_check_add_constructor_callback' )

       use, intrinsic :: iso_c_binding, only : c_funptr, c_ptr, c_char

       type(c_funptr), value                   :: constructor_callback
       type(c_ptr), value                      :: user_data
       character ( kind=c_char ), dimension(*) :: key

     end subroutine yac_interp_method_check_add_constructor_callback_c

     subroutine yac_interp_method_check_add_do_search_callback_c ( &
       do_search_callback, user_data, key ) &
       bind ( c, name='yac_interp_method_check_add_do_search_callback' )

       use, intrinsic :: iso_c_binding, only : c_funptr, c_ptr, c_char

       type(c_funptr), value                   :: do_search_callback
       type(c_ptr), value                      :: user_data
       character ( kind=c_char ), dimension(*) :: key

     end subroutine yac_interp_method_check_add_do_search_callback_c

  end interface

end module yac_core
